@@ -1,3 +1,8 @@
+2002-06-25  Scott S. Goodwin <scott@scottg.net>
+
+	* nsd/tclvar.c:
+	* nsd/tclcmds.c: Reimplemented nsv commands as object commands.
+
 2002-06-19  Jim Davidson <jgdavidson@aol.com>
 
 	* include/ns.h:
